shows basic commit details

--- a/kickit/templates/index.html
+++ b/kickit/templates/index.html
@@ -11,6 +11,7 @@
                     </ul>
                 </li>
                 </ul>
+                <a href="/{{ projectname }}/commits">Commits</a>
                 <div id="fileslist" class="cfix">
                     <span class="name">
                         Filelist
