--- a/kickit/templates/master.html
+++ b/kickit/templates/master.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Kick It</title>
+    <link type='text/css' rel="stylesheet"
+        href='http://fonts.googleapis.com/css?family=Denk+One' />
     <link type="text/css" rel="stylesheet"
         href="{{ url_for('static', filename='kickit.css')}}" />
     <link type="text/css" rel="stylesheet"
