add subtitle to kickit title for each page

--- a/kickit/templates/commit_index.html
+++ b/kickit/templates/commit_index.html
@@ -1,4 +1,5 @@
 {% extends "master.html" %}
+{% block subtitle %} Commit Log {% endblock %}
 {% block content %}
 <div class="heading" style="padding-bottom:10px">
     <h1 style="font-family:Denk One">Commit Log</h1>
