--- a/kickit/templates/master.html
+++ b/kickit/templates/master.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8" />
-    <title>Kick It</title>
+    <title>Kick It | {% block subtitle %}{% endblock %}</title>
     <link type='text/css' rel="stylesheet"
         href='http://fonts.googleapis.com/css?family=Denk+One' />
     <link type="text/css" rel="stylesheet"
