--- a/kickit/templates/blob.html
+++ b/kickit/templates/blob.html
@@ -1,4 +1,5 @@
 {% extends "master.html" %}
+{% block subtitle %} Blob {% endblock %}
 {% block head %}
 <link type="text/css" rel="stylesheet"
         href="{{ url_for('static', filename='sourceview.css')}}" />
