--- a/kickit/templates/index.html
+++ b/kickit/templates/index.html
@@ -1,4 +1,5 @@
 {% extends "master.html" %}
+{% block subtitle %} {{ projectname }} {% endblock %}
 {% block content %}
                 <ul class="nav nav-tabs">
                 <li class="active"><a href="#files" data-toggle="tab">Tree</a></li>
