--- a/kickit/templates/commit_index.html
+++ b/kickit/templates/commit_index.html
@@ -19,7 +19,7 @@
     	      	<div class="accordion-inner">
                     <div class="hex text-warning"><strong>commit:&nbsp;</strong>{{ com.hex }}</div>
                     <div class="author"><strong>Author:&nbsp;</strong>{{ com.author }}</div>
-                    <div class="message">{{ com.message }}</div>
+                    <div class="message"><a href="/{{ r_dict['reponame'] }}/commits/{{ r_dict['branchname'] }}/{{ com.hex }}">{{ com.message }}</a></div>
                     
 	      	    </div>
             </div>
